--- a/campaigns/templates/campaigns/dashboard.html
+++ b/campaigns/templates/campaigns/dashboard.html
@@ -33,6 +33,10 @@
                 <a href="{% url 'user_day2_followup' %}" class="btn btn-outline-warning">
                     <i class="fas fa-phone-alt"></i> Day 2 Follow-ups
                 </a>
+                <!-- NEW: Enquiry History Button -->
+                <a href="{% url 'enquiry_history' %}" class="btn btn-outline-secondary">
+                    <i class="fas fa-history"></i> Enquiry History
+                </a>
             </div>
         </div>
 
