--- a/campaigns/templates/campaigns/create_ad.html
+++ b/campaigns/templates/campaigns/create_ad.html
@@ -43,7 +43,7 @@
 
                     
                     <div class="mb-3">
-                        <label for="{{ form.notes.id_for_label }}" class="form-label">Notes</label>
+                        <label for="{{ form.notes.id_for_label }}" class="form-label" required>Notes</label>
                         {{ form.notes }}
                         {% if form.notes.errors %}
                         <div class="text-danger">{{ form.notes.errors }}</div>
