--- a/campaigns/templates/base.html
+++ b/campaigns/templates/base.html
@@ -15,12 +15,12 @@
     <!-- Google Fonts for Hologram Theme -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="{% static 'css/adsoft-theme.css' %}" rel="stylesheet">
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
+    <link href="{% static 'css/adsoft-theme.css' %}?v=20251003" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}?v=20251003" rel="stylesheet">
+    <link href="{% static 'css/responsive.css' %}?v=20251003" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="{% static 'css/dark-theme.css' %}" rel="stylesheet">
+    <link href="{% static 'css/dark-theme.css' %}?v=20251003" rel="stylesheet">
 
 </head>
 <body>
@@ -65,9 +65,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JS -->
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/dashboard.js' %}"></script>
-    <script src="{% static 'js/theme-switcher.js' %}"></script>
+    <script src="{% static 'js/main.js' %}?v=20251003"></script>
+    <script src="{% static 'js/dashboard.js' %}?v=20251003"></script>
+    <script src="{% static 'js/theme-switcher.js' %}?v=20251003"></script>
     
     {% block extra_js %}
     <script>
